--- a/src/main/resources/templates/lookbook/list.html
+++ b/src/main/resources/templates/lookbook/list.html
@@ -1,22 +1,54 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <head>
-  <title>LOOKBOOK 게시판</title>
-  <link rel="stylesheet" th:href="@{/css/lookbook.css}">
+  <meta charset="UTF-8">
+  <title>Lookbook List</title>
+  <link rel="stylesheet" th:href="@{/lookbook/css/styles.css}">
+  <link rel="stylesheet" th:href="@{/lookbook/css/list.css}">
 </head>
+<header>
+  <div class="logo-container">
+    <a href="/" class="logo">
+      <img src="#" alt="Logo" class="logo-image">
+    </a>
+  </div>
+  <nav>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Contact</a></li>
+      <li><button class="login">UserName</button></li>
+      <li><button class="signup">탈퇴</button></li>
+    </ul>
+  </nav>
+</header>
 <body>
 <div class="container">
-  <h1>Lookbook 게시판</h1>
-  <a href="/fashionlog/lookbook/new" class="button">게시글 작성</a>
-  <div th:each="lookbook : ${lookbooks}" class="lookbook-item">
-    <h2>
-      <a th:href="@{/fashionlog/lookbook/{id}(id=${lookbook.id})}"
-         th:text="${lookbook.title}"></a>
-    </h2>
-    <p th:text="${lookbook.content}"></p>
-    <p>작성일: <span th:text="${lookbook.createdAt}"></span></p>
-    <p>작성자: <span th:text="${lookbook.memberId}"></span></p>
-  </div>
+  <h1>Look Book</h1>
+
+  <hr>
+
+  <table>
+    <thead>
+    <tr>
+      <th>제목</th>
+      <th>작성자</th>
+      <th>작성일</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="post:${lookbooks}" class="post-item">
+      <td>
+        <a th:text="${post.title}" th:href="@{/fashionlog/lookbook/{id}(id=${post.id})}">제목</a>
+      </td>
+      <td>작성자</td>
+      <!-- updateAt이 null 이 아니면 updateAt 표시 -->
+      <td th:if="${post.updatedAt != null}" th:text="${post.updatedAt}">작성일</td>
+      <td th:unless="${post.updatedAt != null}" th:text="${post.createdAt}">작성일</td>
+    </tr>
+    </tbody>
+  </table>
+  <div class="actions"></div>
+  <a class="btn btn-primary" th:href="@{/fashionlog/lookbook/new}">새 글 작성</a>
 </div>
 </body>
 </html>
