--- a/src/main/resources/templates/lookbook/new.html
+++ b/src/main/resources/templates/lookbook/new.html
@@ -1,32 +1,41 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>Lookbook 게시글 작성</title>
-  <link rel="stylesheet" th:href="@{/css/lookbook.css}">
+  <title>새 글 작성</title>
+  <link rel="stylesheet" th:href="@{/lookbook/css/styles.css}">
+  <link rel="stylesheet" th:href="@{/lookbook/css/edit-form.css}">
 </head>
 <body>
+<header>
+  <div class="logo-container">
+    <a href="/" class="logo">
+      <img src="#" alt="Logo" class="logo-image">
+    </a>
+  </div>
+  <nav>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Contact</a></li>
+      <li><button class="login">UserName</button></li>
+      <li><button class="signup">탈퇴</button></li>
+    </ul>
+  </nav>
+</header>
 <div class="container">
-  <h1>새 게시글</h1>
-  <form th:action="@{/fashionlog/lookbook/new}" th:object="${lookbookDto}" method="post">
-    <div>
-      <label for="memberId">회원 아이디:</label>
-      <input type="text" id="memberId" th:field="*{memberId}" placeholder="회원 아이디">
+  <h1>새 글 작성</h1>
+  <form th:action="@{/fashionlog/lookbook/new}" th:object="${lookBook}" method="post">
+    <div class="form-group">
+      <label for="title">Title</label>
+      <input type="text" id="title" name="title" th:field="*{title}" required>
     </div>
-    <div>
-      <label for="title">제목:</label>
-      <input type="text" id="title" th:field="*{title}" placeholder="제목">
+    <div class="form-group">
+      <label for="content">Content</label>
+      <textarea id="content" name="content" th:field="*{content}" required></textarea>
     </div>
-    <div>
-      <label for="content">내용:</label>
-      <textarea id="content" th:field="*{content}" placeholder="내용"></textarea>
-    </div>
-    <div>
-      <label for="postStatus">Post Status:</label>
-      <input type="checkbox" id="postStatus" th:field="*{postStatus}">
-    </div>
-    <div>
-      <input type="submit" value="게시하기">
+    <div class="form-actions">
+      <button type="submit" class="btn btn-primary">등록</button>
+      <a th:href="@{/fashionlog/dailylook}" class="btn btn-secondary">취소</a>
     </div>
   </form>
 </div>
