--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,28 +7,8 @@
   <link rel="stylesheet" th:href="@{/css/home.css}">
 </head>
 <body>
-<header>
-  <div class="logo-container">
-    <a th:href="@{/fashionlog}" class="logo">
-      <img src="#" alt="Logo" class="logo-image">
-    </a>
-  </div>
-  <nav>
-    <ul>
-      <li><a href="#">About Us</a></li>
-      <li><a href="#">Contact</a></li>
-      <li>
-        <button class="login">UserName</button>
-      </li>
-      <li>
-        <button class="signup">탈퇴</button>
-      </li>
-    </ul>
-    <form th:action="@{/logout}" method="post">
-      <input type="submit" value="Logout">
-    </form>
-  </nav>
-</header>
+<div th:replace="~{header :: header}"></div>
+
 <div class="main-content">
   <a th:href="@{/fashionlog/notice}" id="notice"><span>Notice</span></a>
   <a th:href="@{/fashionlog/freeboard}" id="freetalk"><span>Free Talk</span></a>
