--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
 <body>
 <header>
   <div class="logo-container">
-    <a href="/" class="logo">
+    <a th:href="@{/fashionlog}" class="logo">
       <img src="#" alt="Logo" class="logo-image">
     </a>
   </div>
