--- a/src/main/resources/templates/dailylook/edit.html
+++ b/src/main/resources/templates/dailylook/edit.html
@@ -3,25 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Edit Daily Look Post</title>
-  <link rel="stylesheet" th:href="@{/dailylook/css/styles.css}">
-  <link rel="stylesheet" th:href="@{/dailylook/css/edit-form.css}">
+  <link rel="stylesheet" th:href="@{/css/styles.css}">
+  <link rel="stylesheet" th:href="@{/css/board/edit-form.css}">
 </head>
 <body>
-<header>
-  <div class="logo-container">
-    <a href="/" class="logo">
-      <img src="#" alt="Logo" class="logo-image">
-    </a>
-  </div>
-  <nav>
-    <ul>
-      <li><a href="#">About Us</a></li>
-      <li><a href="#">Contact</a></li>
-      <li><button class="login">UserName</button></li>
-      <li><button class="signup">탈퇴</button></li>
-    </ul>
-  </nav>
-</header>
+<div th:replace="~{header :: header}"></div>
+
 <div class="container">
   <h1>Edit Daily Look Post</h1>
   <form th:action="@{/fashionlog/dailylook/{id}/edit(id=${dailyLook.id})}" th:object="${dailyLook}" method="post">
