--- a/src/main/resources/templates/interviewboard/detail.html
+++ b/src/main/resources/templates/interviewboard/detail.html
@@ -3,26 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Interview Board Post Detail</title>
-  <link rel="stylesheet" th:href="@{/interview/css/detail.css}">
-  <link rel="stylesheet" th:href="@{/interview/css/styles.css}">
-  <script th:src="@{/interview/js/detail.js}"></script>
+  <link rel="stylesheet" th:href="@{/css/board/detail.css}">
+  <link rel="stylesheet" th:href="@{/css/styles.css}">
+  <script th:src="@{/js/detail.js}"></script>
 </head>
 <body>
-<header>
-  <div class="logo-container">
-    <a href="/" class="logo">
-      <img src="#" alt="Logo" class="logo-image">
-    </a>
-  </div>
-  <nav>
-    <ul>
-      <li><a href="#">About Us</a></li>
-      <li><a href="#">Contact</a></li>
-      <li><button class="login">UserName</button></li>
-      <li><button class="signup">탈퇴</button></li>
-    </ul>
-  </nav>
-</header>
+<div th:replace="~{header :: header}"></div>
+
 <div class="container">
   <h1><a th:href="@{/fashionlog/interviewboard}">Interview Board</a></h1>
   <div class="post-content">
