--- a/src/main/resources/templates/lookbook/list.html
+++ b/src/main/resources/templates/lookbook/list.html
@@ -3,24 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Lookbook List</title>
-  <link rel="stylesheet" th:href="@{/lookbook/css/styles.css}">
-  <link rel="stylesheet" th:href="@{/lookbook/css/list.css}">
+  <link rel="stylesheet" th:href="@{/css/styles.css}">
+  <link rel="stylesheet" th:href="@{/css/board/list.css}">
 </head>
-<header>
-  <div class="logo-container">
-    <a href="/" class="logo">
-      <img src="#" alt="Logo" class="logo-image">
-    </a>
-  </div>
-  <nav>
-    <ul>
-      <li><a href="#">About Us</a></li>
-      <li><a href="#">Contact</a></li>
-      <li><button class="login">UserName</button></li>
-      <li><button class="signup">탈퇴</button></li>
-    </ul>
-  </nav>
-</header>
+<div th:replace="~{header :: header}"></div>
+
 <body>
 <div class="container">
   <h1>Look Book</h1>
