--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -29,7 +29,7 @@
     </div>
     <div class="remember-forgot">
       <div class="remember-me">
-        <label><input type="checkbox"> 로그인 상태 유지</label>
+        <label><input type="checkbox" name="remember-me"> 로그인 상태 유지</label>
       </div>
     </div>
     <button type="submit" class="login-button">로그인</button>
