Refactor: Header 레이아웃 및 CSS, HTML 구조 개선
- css 가 잘 적용되지 않던 문제 해결
- 중복 코드 제거

--- a/src/main/resources/static/css/board/detail.css
+++ b/src/main/resources/static/css/board/detail.css
@@ -8,6 +8,11 @@
   margin-bottom: 20px;
 }
 
+.post-content-main {
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
+
 .post-content h2 {
   font-size: 20px;
   margin-top: 0;
@@ -41,6 +46,11 @@
 
 .comment-content {
   margin-bottom: 5px;
+}
+
+.comment-content-main {
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
 
 .comment-info {
