--- a/src/main/resources/templates/trade/list.html
+++ b/src/main/resources/templates/trade/list.html
@@ -34,7 +34,17 @@
     </tr>
     </thead>
     <tbody>
-    <tr th:each="post:${trades}" class="post-item">
+    <tr th:each="notice:${tradeNotice}" class="post-item notice-item">
+      <td>
+        <span class="category" th:text="${notice.category.getDisplayName()}">분류</span>
+        <a th:text="${notice.title}" th:href="@{/fashionlog/notice/{id}(id=${notice.id})}">제목</a>
+      </td>
+      <td>작성자</td>
+      <!-- updateAt이 null 이 아니면 updateAt 표시 -->
+      <td th:if="${notice.updatedAt != null}" th:text="${notice.updatedAt}">작성일</td>
+      <td th:unless="${notice.updatedAt != null}" th:text="${notice.createdAt}">작성일</td>
+    </tr>
+    <tr th:each="post:${trades}" class="post-item interview-item">
       <td>
         <a th:text="${post.title}" th:href="@{/fashionlog/trade/{id}(id=${post.id})}">제목</a>
       </td>
