Docs: Trade 게시판 css수정, Trade, Lookbook게시판 글 댓글 권한 재설정

--- a/src/main/resources/templates/trade/editForm.html
+++ b/src/main/resources/templates/trade/editForm.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Trade Post</title>
-  <link rel="stylesheet" th:href="@{/css/board/styles.css}">
+  <link rel="stylesheet" th:href="@{/css/board/edit-form.css}">
   <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
