--- a/src/main/resources/templates/trade/list.html
+++ b/src/main/resources/templates/trade/list.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Trade List</title>
-  <link rel="stylesheet" th:href="@{/trade/css/styles.css}">
-  <link rel="stylesheet" th:href="@{/trade/css/list.css}">
+  <link rel="stylesheet" th:href="@{/css/styles.css}">
+  <link rel="stylesheet" th:href="@{/css/board/list.css}">
 </head>
 <header>
   <div class="logo-container">
-    <a href="/" class="logo">
+    <a href="/fashionlog" class="logo">
       <img src="#" alt="Logo" class="logo-image">
     </a>
   </div>
