--- a/src/main/resources/templates/trade/detail.html
+++ b/src/main/resources/templates/trade/detail.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Trade Post Detail</title>
-  <link rel="stylesheet" th:href="@{/trade/css/detail.css}">
+  <link rel="stylesheet" th:href="@{/css/board/detail.css}">
   <link rel="stylesheet" th:href="@{/css/styles.css}">
   <script th:src="@{/js/detail.js}"></script>
 </head>
