Refactor: FreeBoard 작성자 이름 표시 기능 구현

--- a/src/main/resources/templates/freeboard/list.html
+++ b/src/main/resources/templates/freeboard/list.html
@@ -28,7 +28,7 @@
         <span class="category" th:text="${notice.category.getDisplayName()}">분류</span>
         <a th:text="${notice.title}" th:href="@{/fashionlog/notice/{id}(id=${notice.id})}">제목</a>
       </td>
-      <td>작성자</td>
+      <td th:text="${notice.authorName}">작성자</td>
       <!-- updateAt이 null 이 아니면 updateAt 표시 -->
       <td th:if="${notice.updatedAt != null}" th:text="${notice.updatedAt}">작성일</td>
       <td th:unless="${notice.updatedAt != null}" th:text="${notice.createdAt}">작성일</td>
@@ -37,7 +37,7 @@
       <td>
         <a th:text="${post.title}" th:href="@{/fashionlog/freeboard/{id}(id=${post.id})}">제목</a>
       </td>
-      <td>작성자</td>
+      <td th:text="${post.authorName}">작성자</td>
       <!-- updateAt이 null 이 아니면 updateAt 표시 -->
       <td th:if="${post.updatedAt != null}" th:text="${post.updatedAt}">작성일</td>
       <td th:unless="${post.updatedAt != null}" th:text="${post.createdAt}">작성일</td>
