Refactor: 공지사항 css 변경과 list css 파일 클래스명 변경

--- a/src/main/resources/static/css/board/list.css
+++ b/src/main/resources/static/css/board/list.css
@@ -77,12 +77,12 @@ th {
   background-color: #ffeeba;
 }
 
-/* 인터뷰 게시물 스타일 */
-.interview-item {
+/* 게시판 스타일 */
+.board-item {
   background-color: #e6f3ff;
 }
 
-.interview-item:hover {
+.board-item:hover {
   background-color: #d1e7ff;
 }
 
