--- a/src/main/resources/templates/dailylook/list.html
+++ b/src/main/resources/templates/dailylook/list.html
@@ -33,7 +33,7 @@
       <td th:if="${notice.updatedAt != null}" th:text="${notice.updatedAt}">작성일</td>
       <td th:unless="${notice.updatedAt != null}" th:text="${notice.createdAt}">작성일</td>
     </tr>
-    <tr th:each="post:${dailylooks}" class="post-item interview-item">
+    <tr th:each="post:${dailylooks}" class="post-item board-item">
       <td>
         <a th:text="${post.title}" th:href="@{/fashionlog/dailylook/{id}(id=${post.id})}">제목</a>
       </td>
