--- a/src/main/resources/templates/notice/list.html
+++ b/src/main/resources/templates/notice/list.html
@@ -7,22 +7,9 @@
   <link rel="stylesheet" th:href="@{/css/styles.css}">
   <link rel="stylesheet" th:href="@{/css/board/list.css}">
 </head>
-<header>
-  <div class="logo-container">
-    <a href="/" class="logo">
-      <img src="#" alt="Logo" class="logo-image">
-    </a>
-  </div>
-  <nav>
-    <ul>
-      <li><a href="#">About Us</a></li>
-      <li><a href="#">Contact</a></li>
-      <li><button class="login">UserName</button></li>
-      <li><button class="signup">탈퇴</button></li>
-    </ul>
-  </nav>
-</header>
 <body>
+<div th:replace="~{header :: header}"></div>
+
 <div class="container">
   <h1>Notice</h1>
 
