Refactor: 오직 ADMIN 접속 시 관리자 페이지 버튼 볼 수 있도록 구현

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org" lang="ko"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <header th:fragment="header">
   <div class="logo-container">
     <a th:href="@{/fashionlog}" class="logo">
@@ -6,6 +9,11 @@
   </div>
   <nav>
     <ul>
+      <li>
+        <div sec:authorize="hasRole('ADMIN')">
+          <a th:href="@{/fashionlog/notice}">관리자 페이지</a>
+        </div>
+      </li>
       <li><a href="#">About Us</a></li>
       <li><a href="#">Contact</a></li>
       <li>
@@ -24,3 +32,4 @@
     </ul>
   </nav>
 </header>
+</html>
