--- a/src/main/resources/templates/notice/detail.html
+++ b/src/main/resources/templates/notice/detail.html
@@ -27,8 +27,11 @@
   </div>
   <div class="action-buttons">
     <a href="/fashionlog/notice" class="btn">뒤로</a>
-    <a sec:authorize="hasRole('ADMIN')" th:href="@{/fashionlog/notice/{id}/edit(id=${notice.id})}" class="btn edit-btn">수정</a>
-    <form sec:authorize="hasRole('ADMIN')" th:action="@{/fashionlog/notice/{id}/delete(id=${notice.id})}" method="post" style="display: inline;">
+    <a sec:authorize="hasRole('ADMIN')" th:href="@{/fashionlog/notice/{id}/edit(id=${notice.id})}"
+       class="btn edit-btn">수정</a>
+    <form sec:authorize="hasRole('ADMIN')"
+          th:action="@{/fashionlog/notice/{id}/delete(id=${notice.id})}" method="post"
+          style="display: inline;">
       <button type="submit" class="btn delete-btn">삭제</button>
     </form>
   </div>
@@ -42,11 +45,22 @@
         </div>
         <div class="comment-info">
           <span th:text="${comment.authorName}" class="comment-author">작성자</span>
-          <span class="comment-date" th:if="${comment.updatedAt}" th:text="${#temporals.format(comment.updatedAt, 'MM.dd HH:mm:ss')}"></span>
-          <span class="comment-date" th:unless="${comment.updatedAt}" th:text="${#temporals.format(comment.createdAt, 'MM.dd HH:mm:ss')}"></span>
-          <button th:id="'edit-button-' + ${comment.id}" th:onclick="'toggleEditForm(' + ${comment.id} + ')'" class="btn-edit">수정</button>
-          <form th:action="@{/fashionlog/notice/{postid}/delete-comment/{commentid}(postid=${notice.id}, commentid=${comment.id})}" method="post" style="display: inline;">
-            <button type="submit" class="btn-delete">삭제</button>
+          <span class="comment-date" th:if="${comment.updatedAt}"
+                th:text="${#temporals.format(comment.updatedAt, 'MM.dd HH:mm:ss')}"></span>
+          <span class="comment-date" th:unless="${comment.updatedAt}"
+                th:text="${#temporals.format(comment.createdAt, 'MM.dd HH:mm:ss')}"></span>
+          <button
+              th:if="${#authentication.name == comment.authorEmail or #authorization.expression('hasRole(''ROLE_ADMIN'')')}"
+              th:id="'edit-button-' + ${comment.id}"
+              th:onclick="'toggleEditForm(' + ${comment.id} + ')'" class="btn-edit">수정
+          </button>
+          <form
+              th:action="@{/fashionlog/notice/{postid}/delete-comment/{commentid}(postid=${notice.id}, commentid=${comment.id})}"
+              method="post" style="display: inline;">
+            <button
+                th:if="${#authentication.name == comment.authorEmail or #authorization.expression('hasRole(''ROLE_ADMIN'')')}"
+                type="submit" class="btn-delete">삭제
+            </button>
           </form>
         </div>
         <!-- 수정 모드 -->
@@ -60,7 +74,8 @@
     </ul>
     <!-- 댓글 작성 -->
     <div sec:authorize="hasAnyRole('ADMIN', 'NORMAL')">
-      <form class="comment-form" th:action="@{/fashionlog/notice/{id}/comment(id=${notice.id})}" th:object="${notice}" method="post">
+      <form class="comment-form" th:action="@{/fashionlog/notice/{id}/comment(id=${notice.id})}"
+            th:object="${notice}" method="post">
         <textarea id="content" name="content" placeholder="댓글을 입력하세요"></textarea>
         <button type="submit">등록</button>
       </form>
