Design: header에 로고 이미지 추가

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -4,7 +4,7 @@
 <header th:fragment="header">
   <div class="logo-container">
     <a th:href="@{/fashionlog}" class="logo">
-      <img src="#" alt="Logo" class="logo-image">
+      <img th:src="@{/img/hynss-logo.png}" alt="Logo" class="logo-image">
     </a>
   </div>
   <nav>
