--- a/src/main/resources/static/css/board/list.css
+++ b/src/main/resources/static/css/board/list.css
@@ -123,3 +123,15 @@ th {
 .post-item:hover {
   background-color: inherit;
 }
+
+/* 새 글 작성 */
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.header-container h1 {
+  margin: 0;
+}
