--- a/src/main/resources/templates/dailylook/list.html
+++ b/src/main/resources/templates/dailylook/list.html
@@ -10,8 +10,10 @@
 
 <body>
 <div class="container">
-  <h1>Daily Look</h1>
-
+  <div class="header-container">
+    <h1>Daily Look</h1>
+    <a class="btn btn-primary" th:href="@{/fashionlog/dailylook/new}">새 글 작성</a>
+  </div>
   <hr>
 
   <table>
@@ -45,7 +47,6 @@
     </tbody>
   </table>
   <div class="actions"></div>
-  <a class="btn btn-primary" th:href="@{/fashionlog/dailylook/new}">새 글 작성</a>
 </div>
 </body>
 </html>
