Feat: 헤더에 접속중인 사용자 정보 nickname을 볼 수 있도록 구현

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -16,8 +16,8 @@
       </li>
       <li><a href="#">About Us</a></li>
       <li><a href="#">Contact</a></li>
-      <li>
-        <button class="nav-btn login">UserName</button>
+      <li sec:authorize="isAuthenticated()">
+        <span th:text="${#authentication.principal.nickname} + ' 님'">UserNickname</span>
       </li>
       <li>
         <form th:action="@{/logout}" method="post">
