Refactor: 관리자 페이지 주소 정정

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -11,7 +11,7 @@
     <ul>
       <li>
         <div sec:authorize="hasRole('ADMIN')">
-          <a th:href="@{/fashionlog/notice}">관리자 페이지</a>
+          <a th:href="@{/fashionlog/management}">관리자 페이지</a>
         </div>
       </li>
       <li><a href="#">About Us</a></li>
